--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -20,8 +20,9 @@
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="{% url 'csv_to_json' %}">CSV to JSON</a></li>
-                        <li><a href="request.html">Request a Tool</a></li>
-                        <li><a href="contact.html">Contact us</a></li>
+                        <li><a href="{% url 'temp_convert' %}">Temp Converter</a></li>
+                        <li><a href="{% url 'tool_request' %}">Request a Tool</a></li>
+                        <li><a href="{% url 'contact_us' %}">Contact us</a></li>
                     </ul>
                 </div>
             </div>
@@ -42,27 +43,28 @@
             </div>
         </div>
     </body>
-<script>
-    function saveTextAsFile(textToWrite, fileNameToSaveAs) {
-        var textFileAsBlob = new Blob([textToWrite], { type: 'text/plain' });
-        var downloadLink = document.createElement("a");
-        downloadLink.download = fileNameToSaveAs;
-        downloadLink.innerHTML = "Download File";
-        if (window.webkitURL != null) {
-            // Chrome allows the link to be clicked
-            // without actually adding it to the DOM.
-            downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
-        }
-        else {
-            // Firefox requires the link to be added to the DOM
-            // before it can be clicked.
-            downloadLink.href = window.URL.createObjectURL(textFileAsBlob);
-            downloadLink.onclick = destroyClickedElement;
-            downloadLink.style.display = "none";
-            document.body.appendChild(downloadLink);
-        }
+    <script>
+        function saveTextAsFile(textToWrite, fileNameToSaveAs) {
+            var textFileAsBlob = new Blob([textToWrite], { type: 'text/plain' });
+            var downloadLink = document.createElement("a");
+            downloadLink.download = fileNameToSaveAs;
+            downloadLink.innerHTML = "Download File";
+            if (window.webkitURL != null) {
+                // Chrome allows the link to be clicked
+                // without actually adding it to the DOM.
+                downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
+            }
+            else {
+                // Firefox requires the link to be added to the DOM
+                // before it can be clicked.
+                downloadLink.href = window.URL.createObjectURL(textFileAsBlob);
+                downloadLink.onclick = destroyClickedElement;
+                downloadLink.style.display = "none";
+                document.body.appendChild(downloadLink);
+            }
 
-        downloadLink.click();
-    }
-</script>
+            downloadLink.click();
+        }
+    </script>
+
 </html>
