drop down menu added

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -19,7 +19,12 @@
                 <div class="menu">
                     <ul>
                         <li><a href="#">Home</a></li>
-                        <li><a href="{% url 'csv_to_json' %}">CSV to JSON</a></li>
+                        <li><a href="#">CSV Converter</a>
+                            <ul>
+                                <li><a href="{% url 'csv_to_json' %}">CSV to JSON</a></li>
+                                <li><a href="{% url 'csv_to_json' %}">CSV to HTML</a></li>
+                            </ul>
+                        </li>
                         <li><a href="{% url 'temp_convert' %}">Temp Converter</a></li>
                         <li><a href="{% url 'tool_request' %}">Request a Tool</a></li>
                         <li><a href="{% url 'contact_us' %}">Contact us</a></li>
