--- a/tools/static/css/base.css
+++ b/tools/static/css/base.css
@@ -5,13 +5,21 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:#d0d0d0;bo
 #header a{color:#fff;line-height: 60px;}
 .container{width:100%;max-width: 1300px;margin:0 auto;display:flex;justify-content: space-between;}
 
-.logo{flex-basis:40%;}
-.menu {flex-basis:60%;}
+.logo{flex-basis:30%;}
+.menu {flex-basis:70%;}
 .logo a{font-size:48px;text-decoration: none;}
 .menu ul{float:right;}
 .menu ul{padding: 0;margin: 0;text-align:right;}
-.menu ul li{display:inline-block;}
+.menu ul li{position:relative;display:inline-block;}
 .menu ul li a{padding: 10px;text-decoration: none;}
+
+.menu ul ul{position:absolute;top:60px;background:red;display:none;}
+.menu ul li:hover > ul{display:block;z-index: 100;}
+
+
+
+
+
 
 
 .main-block{background:#fff;margin-top:10px;margin-bottom: 10px;}
