--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -22,7 +22,7 @@
                         <li><a href="#">CSV Converter</a>
                             <ul>
                                 <li><a href="{% url 'csv_to_json' %}">CSV to JSON</a></li>
-                                <li><a href="{% url 'csv_to_json' %}">CSV to HTML</a></li>
+                                <li><a href="{% url 'csv_to_html' %}">CSV to HTML</a></li>
                             </ul>
                         </li>
                         <li><a href="{% url 'temp_convert' %}">Temp Converter</a></li>
