--- a/tools/templates/tools/contact.html
+++ b/tools/templates/tools/contact.html
@@ -7,7 +7,7 @@
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="Name">Name</label><br />
-    <input type="text" name="cel" id="cel" placeholder="Enter temparature in celcius"> <br />
+    <input type="text" name="name" id="name" placeholder="Enter your Name"> <br />
     <label for="email">Email </label> <br />
     <input type="email" name="email" id="email" placeholder="Enter a valid email ID">
     <label for="message">Your message</label> <br />
