CSV to XML converter added

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -23,6 +23,7 @@
                             <ul>
                                 <li><a href="{% url 'csv_to_json' %}">CSV to JSON</a></li>
                                 <li><a href="{% url 'csv_to_html' %}">CSV to HTML</a></li>
+                                <li><a href="{% url 'csv_to_xml' %}">CSV to XML</a></li>
                             </ul>
                         </li>
                         <li><a href="{% url 'temp_convert' %}">Temp Converter</a></li>
