--- a/tools/templates/tools/csv_to_html.html
+++ b/tools/templates/tools/csv_to_html.html
@@ -9,7 +9,7 @@
     <label for="csv_data">Paste Your CSV Data here</label><br />
     <!-- <input type="file" name="myFile" onchange="this.form.submit();"> -->
     <textarea name="csv_data" id="csv_data" cols="80" rows="10">{{csv}}</textarea>
-    <button>Convert into JSON</button><br />
+    <button>Convert into HTML</button><br />
     <label for="html_data">Your HTML Data Table</label>
     <textarea name="json_data" id="json_data" cols="80" rows="15">{{html_data}}</textarea>
 </form>
