images resizer added

--- a/tools/templates/tools/sidebar.html
+++ b/tools/templates/tools/sidebar.html
@@ -5,8 +5,14 @@
     nulla perferendis nostrum, placeat omnis, nobis corrupti aperiam debitis dolores officiis non commodi ut veniam
     sapiente. Nisi sed sit ullam accusantium explicabo asperiores cum voluptate autem dolore similique. Delectus id
     voluptates magni exercitationem quaerat quibusdam eaque veniam, quidem iste. Repellendus facilis possimus eius
-    culpa. Similique, non cumque? Eaque, corporis earum! Quia exercitationem maiores officiis similique accusamus nam
-    labore consequatur vitae rerum cupiditate facere numquam, aliquam eveniet sequi, tempore voluptatibus obcaecati hic,
-    ex dolorum. Error corporis nisi maiores facere atque suscipit ea placeat et doloribus, assumenda esse alias
-    Ad nostrum nisi eum temporibus rem nobis, exercitationem dignissimos. Iste eaque fuga aspernatur commodi
-    hic explicabo?</p>
+    hic explicabo?
+</p>
+<h3>Some Other Popular Tools</h3>
+<ol>
+    <li><a href="#">CSV TO JSON</a></li>
+    <li><a href="#">CSV TO HTML</a></li>
+    <li><a href="#">CSV TO HTML</a></li>
+    <li><a href="#">CSV TO HTML</a></li>
+    <li><a href="#">Temp Converter</a></li>
+    <li><a href="#">Bulk Image Resizer</a></li>
+</ol>
