drop down menu added

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -27,6 +27,7 @@
                             </ul>
                         </li>
                         <li><a href="{% url 'temp_convert' %}">Temp Converter</a></li>
+                        <li><a href="{% url 'whois' %}">Whois</a></li>
                         <li><a href="{% url 'resize_images' %}">Image Resize</a></li>
                         <li><a href="{% url 'tool_request' %}">Request a Tool</a></li>
                         <li><a href="{% url 'contact_us' %}">Contact us</a></li>
