drop down menu added

--- a/passwordtools/templates/passwordtools/password_gen.html
+++ b/passwordtools/templates/passwordtools/password_gen.html
@@ -8,7 +8,15 @@
     {% csrf_token %}
     <label for="length">Char Length </label>
     <input type="number" name="length" id="length">
-    <input type="submit" value ="Generate Password">
+    <label for="digits"> Alphabets (a,b,c,d... )</label>
+    <input type="checkbox" id="Chars" name="chars" value="characters">
+    <label for="digits"> Digits(0,1,2---9)</label><br>
+    <input type="checkbox" id="digits" name="digits" value="digits">
+    <label for="special_char"> Special Chars like(!@#$%^&&*) </label>
+    <input type="checkbox" id="special" name="special" value="special">
+    <label for="capital"> Capital Letters (A,B,C....)</label>
+    <input type="checkbox" id="capital" name="capital" value="capital">
+    <input type="submit" value="Generate Password">
 </form>
-<p>Your Password is :  </p>
+<p>Your Password is : </p>
 {% endblock content %}
