--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -27,11 +27,9 @@
                             </ul>
                         </li>
                         <li><a href="{% url 'temp_convert' %}">Temp Converter</a></li>
-<<<<<<< HEAD
-                        <li><a href="{% url 'whois' %}">Whois</a></li>
-=======
+                        <li><a href="{% url 'password_generator' %}">Password Generator</a></li>
                         <li><a href="{% url 'domain_age' %}">Domain Age Checker</a></li>
->>>>>>> 629ddbb8d30db3be76169cdc16121c7a118c89ae
+                        <li><a href="{% url 'whois' %}">Whois Checker</a></li>
                         <li><a href="{% url 'resize_images' %}">Image Resize</a></li>
                         <li><a href="{% url 'tool_request' %}">Request a Tool</a></li>
                         <li><a href="{% url 'contact_us' %}">Contact us</a></li>
