--- a/tools/static/css/base.css
+++ b/tools/static/css/base.css
@@ -5,8 +5,8 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:#d0d0d0;bo
 #header a{color:#fff;line-height: 60px;}
 .container{width:100%;max-width: 1300px;margin:0 auto;display:flex;justify-content: space-between;}
 
-.logo{flex-basis:30%;}
-.menu {flex-basis:70%;}
+.logo{flex-basis:20%;}
+.menu {flex-basis:80%;}
 .logo a{font-size:48px;text-decoration: none;}
 .menu ul{float:right;}
 .menu ul{padding: 0;margin: 0;text-align:right;}
@@ -28,6 +28,11 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:#d0d0d0;bo
 #footer{background:#444;}
 #footer a{color:#fff;text-decoration: none;}
 #footer p{margin:0 auto;padding:10px 0;}
+
+
+input{padding:10;width:100%;box-sizing: border-box;margin-bottom:20px;}
+input[type='text']{padding:5px 10px;width:100%;box-sizing: border-box;margin-bottom:20px;}
+input[type='submit']{background:red;color:white;border:none;padding:8px 10px;font-style:bold;}
 
 textarea{font-size:16px;}
 button{padding:10px;background:red;color:#fff;}
