drop down menu added

--- a/passwordtools/templates/passwordtools/password_gen.html
+++ b/passwordtools/templates/passwordtools/password_gen.html
@@ -18,5 +18,5 @@
     <input type="checkbox" id="capital" name="capital" value="capital">
     <input type="submit" value="Generate Password">
 </form>
-<p>Your Password is : </p>
+<p>Your Password is : {{password}}</p>
 {% endblock content %}
