--- a/tools/static/css/base.css
+++ b/tools/static/css/base.css
@@ -30,7 +30,7 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:#d0d0d0;bo
 #footer p{margin:0 auto;padding:10px 0;}
 
 
-input{padding:10;width:100%;box-sizing: border-box;margin-bottom:20px;}
+input{padding:10;width:100%;box-sizing: border-box;}
 input[type='text']{padding:5px 10px;width:100%;box-sizing: border-box;margin-bottom:20px;}
 input[type='submit']{background:red;color:white;border:none;padding:8px 10px;font-style:bold;}
 
