--- a/binarytools/templates/binarytools/string_2_binary.html
+++ b/binarytools/templates/binarytools/string_2_binary.html
@@ -1,13 +1,13 @@
 {% extends 'basic.html' %}
 
-{% block title %} Decimal to Binary Converson Tool {% endblock %}
+{% block title %} String into Binary Converson Tool {% endblock %}
 
 {% block content %}
-<h1>Decimal number into Binary Number converter</h1>
+<h1>String into Binary Number converter</h1>
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    <label for="decimal">Decimal Number </label>
-    <input type="text" name="decimal" id="decimal" value="{{decimal}}">
+    <label for="string">String </label>
+    <input type="text" name="string" id="string" value="{{string}}">
     <input type="submit" value="Convert into Binary Number">
 </form>
 <p>Your Binary Number is :{{no}} </p>
