error in orders

--- a/passwordtools/templates/passwordtools/password_gen.html
+++ b/passwordtools/templates/passwordtools/password_gen.html
@@ -7,15 +7,7 @@
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="length">Char Length </label>
-    <input type="number" name="length" id="length">
-    <label for="digits"> Alphabets (a,b,c,d... )</label>
-    <input type="checkbox" id="Chars" name="chars" value="characters">
-    <label for="digits"> Digits(0,1,2---9)</label><br>
-    <input type="checkbox" id="digits" name="digits" value="digits">
-    <label for="special_char"> Special Chars like(!@#$%^&&*) </label>
-    <input type="checkbox" id="special" name="special" value="special">
-    <label for="capital"> Capital Letters (A,B,C....)</label>
-    <input type="checkbox" id="capital" name="capital" value="capital">
+    <input type="number" name="length" id="length" value="8">
     <input type="submit" value="Generate Password">
 </form>
 <p>Your Password is : {{password}}</p>
