--- a/tools/static/css/base.css
+++ b/tools/static/css/base.css
@@ -11,15 +11,15 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:#d0d0d0;bo
 .menu ul{float:right;}
 .menu ul{padding: 0;margin: 0;text-align:right;}
 .menu ul li{position:relative;display:inline-block;}
-.menu ul li a{padding: 10px;text-decoration: none;}
+.menu ul li a{padding:0 10px;text-decoration: none;}
+
+.menu ul ul li{width:220px;text-align:left;}
 
 .menu ul ul{position:absolute;top:60px;background:red;display:none;}
 .menu ul li:hover > ul{display:block;z-index: 100;}
 
-
-
-
-
+.menu ul ul li a{display:block;padding:3px 10px;}
+.menu ul ul li a:hover{background:#444;color:#000;display:block;}
 
 
 .main-block{background:#fff;margin-top:10px;margin-bottom: 10px;}
