decimal to octal converter added

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -31,6 +31,7 @@
                                     <li><a href="{% url 'decimal_2_binary' %}">Decimal 2 Binary</a></li>
                                     <li><a href="{% url 'string_2_binary' %}">String 2 Binary</a></li>
                                     <li><a href="{% url 'binary_2_decimal' %}">Binary 2 Decimal</a></li>
+                                    <li><a href="{% url 'decimal_2_octal' %}">Decimal 2 Octal</a></li>
                                 </ul>
                         </li>
                         <li><a href="#">Password Tools</a>
