--- a/binarytools/templates/binarytools/decimal_2_hexa.html
+++ b/binarytools/templates/binarytools/decimal_2_hexa.html
@@ -1,14 +1,14 @@
 {% extends 'basic.html' %}
 
-{% block title %} Decimal Number into Octal Number converter Tool {% endblock %}
+{% block title %} Decimal Number into HexaDecimal Number converter Tool {% endblock %}
 
 {% block content %}
-<h1>Decimal Number into Octal Number converter</h1>
+<h1>Decimal Number into HexaDecimal Number converter</h1>
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="decimal">Decimal Number </label>
     <input type="text" name="decimal" id="decimal" value="{{dec}}">
     <input type="submit" value="Convert into Decimal Number">
 </form>
-<p>Your Octal Number is :{{no}} </p>
+<p>Your HexaDecimal Number is :{{no}} </p>
 {% endblock content %}
