HExadecimal  to decimal converter tool added

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -33,7 +33,9 @@
                                     <li><a href="{% url 'decimal_2_hexa' %}">Decimal 2 HexaDecimal</a></li>
                                     <li><a href="{% url 'string_2_binary' %}">String 2 Binary</a></li>
                                     <li><a href="{% url 'binary_2_decimal' %}">Binary 2 Decimal</a></li>
+                                    <li><a href="{% url 'hexa_2_decimal' %}">Hexa 2 Decimal</a></li>
                                     <li><a href="{% url 'binary_2_octal' %}">Binary 2 Octal</a></li>
+                                    <li><a href="{% url 'binary_2_hexa' %}">Binary 2 HexaDecimal</a></li>
                                 </ul>
                         </li>
                         <li><a href="#">Password Tools</a>
