--- a/binarytools/templates/binarytools/binary_2_hexa.html
+++ b/binarytools/templates/binarytools/binary_2_hexa.html
@@ -1,14 +1,14 @@
 {% extends 'basic.html' %}
 
-{% block title %} Binary Number into Octal Number converter Tool {% endblock %}
+{% block title %} Binary Number into Hexadecimal Number converter Tool {% endblock %}
 
 {% block content %}
-<h1>Binary Number into Octal Number converter</h1>
+<h1>Binary Number into Hexadecimal Number converter</h1>
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="binary">Binary Number </label>
     <input type="text" name="binary" id="binary" value="{{dec}}">
-    <input type="submit" value="Convert into Octal Number">
+    <input type="submit" value="Convert into Hexadecimal Number">
 </form>
-<p>Your Octal Number is :{{no}} </p>
+<p>Your Hexadecimal Number is :{{no}} </p>
 {% endblock content %}
