qr generator implemented with bug

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -27,22 +27,22 @@
                             </ul>
                         </li>
                         <li><a href="#">Binary Tools</a>
-                                <ul>
-                                    <li><a href="{% url 'decimal_2_binary' %}">Decimal 2 Binary</a></li>
-                                    <li><a href="{% url 'decimal_2_octal' %}">Decimal 2 Octal</a></li>
-                                    <li><a href="{% url 'decimal_2_hexa' %}">Decimal 2 HexaDecimal</a></li>
-                                    <li><a href="{% url 'string_2_binary' %}">String 2 Binary</a></li>
-                                    <li><a href="{% url 'binary_2_decimal' %}">Binary 2 Decimal</a></li>
-                                    <li><a href="{% url 'octal_2_decimal' %}">Octal 2 Decimal</a></li>
-                                    <li><a href="{% url 'hexa_2_decimal' %}">Hexa 2 Decimal</a></li>
-                                    <li><a href="{% url 'binary_2_octal' %}">Binary 2 Octal</a></li>
-                                    <li><a href="{% url 'binary_2_hexa' %}">Binary 2 HexaDecimal</a></li>
-                                </ul>
+                            <ul>
+                                <li><a href="{% url 'decimal_2_binary' %}">Decimal 2 Binary</a></li>
+                                <li><a href="{% url 'decimal_2_octal' %}">Decimal 2 Octal</a></li>
+                                <li><a href="{% url 'decimal_2_hexa' %}">Decimal 2 HexaDecimal</a></li>
+                                <li><a href="{% url 'string_2_binary' %}">String 2 Binary</a></li>
+                                <li><a href="{% url 'binary_2_decimal' %}">Binary 2 Decimal</a></li>
+                                <li><a href="{% url 'octal_2_decimal' %}">Octal 2 Decimal</a></li>
+                                <li><a href="{% url 'hexa_2_decimal' %}">Hexa 2 Decimal</a></li>
+                                <li><a href="{% url 'binary_2_octal' %}">Binary 2 Octal</a></li>
+                                <li><a href="{% url 'binary_2_hexa' %}">Binary 2 HexaDecimal</a></li>
+                            </ul>
                         </li>
                         <li><a href="#">Password Tools</a>
                             <ul>
                                 <li><a href="{% url 'password_generator' %}">Password Generator</a></li>
-                                
+
                             </ul>
                         </li>
                         <li><a href="#">Domain Tools</a>
@@ -53,7 +53,7 @@
                         </li>
                         <li><a href="#">Image Tools</a>
                             <ul>
-                              
+                                <li><a href="{% url 'qrcode' %}">QR Code Generator</a></li>
                                 <li><a href="{% url 'resize_images' %}">Image Resize</a></li>
                             </ul>
                         </li>
@@ -62,8 +62,8 @@
                                 <li><a href="{% url 'temp_convert' %}">Temp Converter</a></li>
                             </ul>
                         </li>
-                        
-                        
+
+
                         <li><a href="{% url 'tool_request' %}">Request a Tool</a></li>
                         <li><a href="{% url 'contact_us' %}">Contact us</a></li>
                     </ul>
