--- a/tools/templates/tools/home.html
+++ b/tools/templates/tools/home.html
@@ -3,12 +3,106 @@
 {% block title %} BinaryNote Tools {% endblock %}
 
 {% block content %}
-<h2>Text Tools</h2>
-<ul>
-    <li><a href=""></a></li>
-</ul>
-<h2>Domain Tools</h2>
-<h2>Password Tools</h2>
-<h2>Image Tools</h2>
-<h2>Binary Tools</h2>
+<div class="tools">
+    <div class="heading">
+        <h2>Binary Tools</h2>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-facebook fa-4x"></i>
+        <p>Decimal 2 Binary</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-facebook fa-4x"></i>
+        <p>Decimal 2 Binary</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-facebook fa-4x"></i>
+        <p>Decimal 2 Binary</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-facebook fa-4x"></i>
+        <p>Decimal 2 Binary</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-facebook fa-4x"></i>
+        <p>Decimal 2 Binary</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-facebook fa-4x"></i>
+        <p>Decimal 2 Binary</p>
+    </div>
+</div>
+
+<div class="tools">
+    <div class="heading">
+        <h2>CSV Tools</h2>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>CSV 2 Json</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>CSV 2 HTML</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>CSV 2 XML</p>
+    </div>
+</div>
+
+<div class="tools">
+    <div class="heading">
+        <h2>Image Tools</h2>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>Favicon Generator</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>Image Resizer</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>Image Compressor</p>
+    </div>
+</div>
+
+<div class="tools">
+    <div class="heading">
+        <h2>Domain Tools</h2>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>Domain Age</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>Whois</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>DNS Records</p>
+    </div>
+</div>
+
+<div class="tools">
+    <div class="heading">
+        <h2>Unit Tools</h2>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>Temp Converter</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>Unit Converter</p>
+    </div>
+    <div class="box-3">
+        <i class="fa fa-file fa-4x"></i>
+        <p>Currency Converter</p>
+    </div>
+</div>
+
 {% endblock content %}
