--- a/binarytools/templates/binarytools/decimal_2_binary.html
+++ b/binarytools/templates/binarytools/decimal_2_binary.html
@@ -10,5 +10,20 @@
     <input type="text" name="decimal" id="decimal" value="{{decimal}}">
     <input type="submit" value="Convert into Binary Number">
 </form>
-<p>Your Binary Number is :{{no}} </p>
+<textarea name="binary" id="binary" cols="100" rows="10" disabled>{{no}}</textarea>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellat suscipit atque rerum blanditiis ex maiores eum
+    corrupti itaque libero, autem nisi nam expedita dolores! Veritatis deleniti, et repudiandae minus ad minima.
+    Voluptas molestiae cum consequatur ad veritatis, velit quod quia provident quasi, obcaecati et beatae ipsum quisquam
+    repellat rerum iste?</p>
+<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maxime beatae quas corrupti magnam qui aspernatur omnis
+    quis deserunt cupiditate totam, nihil neque. At, dignissimos. Officiis unde delectus blanditiis corporis. Asperiores
+    voluptas ut dicta consectetur consequatur id libero amet saepe dolorem perferendis. Nesciunt ipsam itaque tempora
+    aspernatur incidunt iste, pariatur autem soluta modi! Modi quasi dolorem, molestias id laudantium recusandae. Est
+    nostrum provident nisi doloribus incidunt. Rerum, cumque itaque. Quas iure, consequatur qui, beatae eos maxime error
+    similique sint nemo eveniet nihil corporis natus soluta! Quas, velit! Quod reiciendis ad, repudiandae quaerat odio
+    vitae inventore. Modi, pariatur sunt! Deleniti, explicabo harum.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere, fugit molestiae! Recusandae architecto fuga maiores
+    ratione officiis debitis nesciunt consequatur beatae quae laborum tenetur ut quod iusto deleniti quaerat ipsam
+    praesentium, sapiente ipsa! Doloribus aperiam, aut soluta, quae similique alias distinctio temporibus laborum animi
+    perspiciatis nihil deserunt aspernatur ad consectetur?</p>
 {% endblock content %}
