--- a/tools/static/css/base.css
+++ b/tools/static/css/base.css
@@ -8,21 +8,17 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../im
 .logo{flex-basis:20%;}
 .menu {flex-basis:80%;}
 .logo a{font-size:48px;text-decoration: none;line-height:60px;}
+
 .menu ul{float:right;line-height:60px;}
 .menu ul{padding: 0;margin: 0;text-align:right;}
 .menu ul li{position:relative;display:inline-block;}
 .menu ul li a{padding:0 10px;text-decoration: none;}
-
 .menu ul ul li{width:220px;text-align:left;}
-
 .menu ul ul{position:absolute;top:60px;background:#888;display:none;}
 .menu ul li:hover > ul{display:block;z-index: 100;}
-
-
 .menu ul ul li{display:block;line-height:48px;}
 .menu ul ul li a{display:block;}
 .menu ul ul li a:hover{background:#444;color:#000;display:block;}
-
 
 .main-block{margin-top:10px;margin-bottom: 10px;}
 .main{flex-basis:68%;padding:10px 20px;box-sizing: border-box;}
@@ -41,9 +37,14 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../im
 .box-3:hover{background:linear-gradient(45deg #e4e4e7,#fdb7b7);transition:all 0.3s ;}
 
 
-input{padding:10;width:100%;box-sizing: border-box;}
-input[type='text']{padding:5px 10px;width:100%;box-sizing: border-box;margin-bottom:20px;}
-input[type='submit']{background:red;color:white;border:none;padding:8px 10px;font-style:bold;}
+label{display:block;width:100%;margin:0 auto;}
+input,textarea{padding:10;width:100%;box-sizing: border-box;font-style:bold;border-radius:10px;font-size:18px;font-style:bold;
+        border:none;}
+
+input[type='text']{padding:10px 10px;width:100%;box-sizing: border-box;margin-bottom:20px;font-size:18px;font-style:bold;border-radius:10px;
+        border:none;
+}
+input[type='submit']{background:red;color:white;border:none;padding:8px 10px;font-size:18px;font-style:bold;font-style:bold;}
 
 textarea{font-size:16px;}
 button{padding:10px;background:red;color:#fff;}
