binary to decimal imporved

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -86,7 +86,7 @@
                 <p>All rights reserved to <a href="https://cbsetoday.com" target="_blank">CBSE Today</a></p>
             </div>
         </div>
-    </body>
+   
     <script>
         function saveTextAsFile(textToWrite, fileNameToSaveAs) {
             var textFileAsBlob = new Blob([textToWrite], { type: 'text/plain' });
@@ -110,5 +110,21 @@
             downloadLink.click();
         }
     </script>
+    <script>
+        function myFunction() {
+                /* Get the text field */
+                var copyText = document.getElementById("password");
 
+                /* Select the text field */
+                copyText.select();
+                copyText.setSelectionRange(0, 99999); /*For mobile devices*/
+
+                /* Copy the text inside the text field */
+                document.execCommand("copy");
+
+                /* Alert the copied text */
+                alert("Copied the text: " + copyText.value);
+            }
+    </script>
+    </body>
 </html>
