--- a/passwordtools/templates/passwordtools/password_gen.html
+++ b/passwordtools/templates/passwordtools/password_gen.html
@@ -10,5 +10,20 @@
     <input type="number" name="length" id="length" value="8">
     <input type="submit" value="Generate Password">
 </form>
-<p>Your Password is : {{password}}</p>
+<textarea name="password" id="password" cols="100" rows="10">{{password}}</textarea> 
+<button id="clipboard" onclick="myFunction()">Copy to ClipBoard</button>
+<h2>What is Password Generate</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, explicabo quibusdam quam veritatis unde accusantium asperiores, est voluptatem nemo nihil dolores maxime dolor tempora alias molestiae! Dicta, odit! Officia harum assumenda accusantium nemo, fugiat ipsam rem accusamus animi, officiis nostrum molestiae quaerat nihil praesentium similique necessitatibus reiciendis, delectus vero cumque.</p>
+<h2>Why we need Strong Password</h2>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque aut, architecto cum autem, consequatur earum commodi tenetur, placeat veniam qui iste magni cupiditate aliquam iure obcaecati at corporis sed incidunt iusto repudiandae eius ipsa omnis. Harum sequi perferendis vitae debitis animi non minus assumenda, similique ducimus dolores, iure quis repellendus vel, quos corporis commodi culpa maxime. Sapiente excepturi, natus, iste tenetur ut molestiae delectus dolore commodi accusamus minima maiores id totam impedit voluptas odit iure cupiditate incidunt numquam deserunt pariatur? Dolorum, neque. Adipisci eius voluptatem non blanditiis fugiat! Modi voluptatem voluptas ut, provident minima eveniet at mollitia quasi architecto obcaecati.</p>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit odit officia aut asperiores accusamus aliquid, explicabo iure, dolorum hic quibusdam, ab tenetur facere deleniti ipsum. Sequi ipsum reprehenderit nam debitis nisi iure necessitatibus dolor ipsa aperiam quibusdam veniam mollitia, doloremque unde optio hic reiciendis rem adipisci explicabo obcaecati incidunt repudiandae ipsam vero id voluptate? Blanditiis impedit, libero, nostrum dignissimos debitis eaque deleniti ullam possimus laboriosam nobis odit quas vero tenetur nulla at, quisquam odio soluta cum laborum enim non pariatur accusantium fugiat. Voluptates, sit. Magni vero maiores commodi voluptas provident et laborum, ullam quaerat ratione. A aut cum ea nisi?</p>
+<h2>How to use Strong Password Generator</h2>
+<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos dolor distinctio perspiciatis a eligendi nobis nisi eius iure expedita rem ratione officiis quasi praesentium sit dolorum, alias sequi fuga minima eos, accusantium assumenda. Sed ducimus esse sunt aut cupiditate, voluptate recusandae dignissimos inventore ipsa adipisci repudiandae enim? Qui ut pariatur asperiores nulla tempora voluptatibus reiciendis natus eligendi tenetur excepturi in ex culpa impedit necessitatibus repudiandae commodi quam dolores sapiente nostrum repellendus molestias, facere vitae minima. Iusto rem adipisci possimus enim ab. Perspiciatis deserunt harum unde vero maxime cupiditate tempora et, explicabo, omnis ab labore eaque id dolorem sint possimus animi.</p>
+<h2>Video on How to use Strong password</h2>
+<div class="video-container">
+    <iframe class="responsive-iframe" src="https://www.youtube.com/embed/LaeAiXOc_3Q"></iframe>
+</div>
+
+<h3>Conclusion</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati doloribus eos consequatur non corrupti tenetur quod dolorum eveniet adipisci, saepe doloremque culpa iure facere rem quas quis sunt est dolore, laboriosam voluptatem. Eius, praesentium consequatur autem quia reiciendis distinctio.</p>
 {% endblock content %}
