--- a/tools/static/css/base.css
+++ b/tools/static/css/base.css
@@ -37,6 +37,7 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../im
 .box-3:hover i{color:blue;cursor: pointer;}
 .box-3:hover{background:linear-gradient(45deg #e4e4e7,#fdb7b7);transition:all 0.3s ;}
 
+iframe{width:100%;height:auto;}
 
 label{display:block;width:100%;margin:0 auto;}
 input,textarea{padding:10;width:100%;box-sizing: border-box;font-style:bold;border-radius:10px;font-size:18px;font-style:bold;
@@ -49,3 +50,22 @@ input[type='submit']{background:red;color:white;border:none;padding:8px 10px;fon
 
 textarea{font-size:16px;}
 button{padding:10px;background:red;color:#fff;}
+
+
+.video-container {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+}
+
+/* Then style the iframe to fit in the container div with full height and width */
+.responsive-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+}
