--- a/tools/static/css/base.css
+++ b/tools/static/css/base.css
@@ -1,5 +1,6 @@
 body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../image/background.svg') #e3e3e3;background-size:cover;box-sizing:border-box;}
 
+#button{background:red;color:white;padding:8px 15px;text-align: center;cursor:pointer;width:250px;margin:0 auto;margin-bottom:10px;}
 
 #header{background:#444;}
 #header a{color:#fff;}
@@ -22,8 +23,10 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../im
 
 .main-block{margin-top:10px;margin-bottom: 10px;}
 .main{flex-basis:68%;padding:10px 20px;box-sizing: border-box;}
-.main p{padding:10px 20px;background:#fff;border-radius:10px;}
 .sidebar{flex-basis:30%;padding:10px 20px;background:#f0f0f0;}
+
+.tool{border:1px dotted #999; padding:10px 20px;}
+.extra-information{background:#fff;padding:10px 30px;margin-top:10px;box-sizing:border-box;;}
 
 #footer{background:#444;}
 #footer a{color:#fff;text-decoration: none;}
@@ -35,18 +38,18 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../im
 .box-3 p{margin: 0;}
 
 .box-3:hover i{color:blue;cursor: pointer;}
-.box-3:hover{background:linear-gradient(45deg #e4e4e7,#fdb7b7);transition:all 0.3s ;}
+.box-3:hover{background:teal;cursor: pointer;color:#fff; transition:all 0.3s ;}
 
 iframe{width:100%;height:auto;}
 
 label{display:block;width:100%;margin:0 auto;}
 input,textarea{padding:10;width:100%;box-sizing: border-box;font-style:bold;border-radius:10px;font-size:18px;font-style:bold;
         border:none;}
-textarea{background:#fff;padding:10px 20px;margin-top:10px;}
-input[type='text']{padding:10px 10px;width:100%;box-sizing: border-box;margin-bottom:20px;font-size:18px;font-style:bold;border-radius:10px;
+textarea{padding:10px 20px;margin-top:10px;background:#fff;}
+input[type='text'],input[type="number"],input[type="email"]{padding:10px 10px;width:100%;box-sizing: border-box;margin-bottom:20px;font-size:18px;font-style:bold;border-radius:10px;
         border:none;
 }
-input[type='submit']{background:red;color:white;border:none;padding:8px 10px;font-size:18px;font-style:bold;font-style:bold;cursor:pointer;}
+input[type='submit']{background:red;border:none;padding:8px 10px;font-size:18px;font-style:bold;font-style:bold;cursor:pointer;}
 
 textarea{font-size:16px;}
 button{padding:10px;background:red;color:#fff;}
@@ -68,4 +71,15 @@ button{padding:10px;background:red;color:#fff;}
   right: 0;
   width: 100%;
   height: 100%;
+}
+
+@media screen and (max-width:960px){
+  .container{flex-direction: column;}
+}
+@media screen and ( max-width:640px){
+  .box-3{flex-basis:49%;}
+}
+
+@media screen and ( max-width:480px){
+  .box-3{flex-basis:100%;}
 }
