Two new tools added

--- a/passwordtools/templates/passwordtools/password_strength.html
+++ b/passwordtools/templates/passwordtools/password_strength.html
@@ -75,3 +75,35 @@
         voluptatem. Eius, praesentium consequatur autem quia reiciendis distinctio.</p>
 </div>
 {% endblock content %}
+
+{% block script %}
+<script>
+    function myFunction() {
+        /* Get the text field */
+        var copyText = document.getElementById("password");
+
+        /* Select the text field */
+        copyText.select();
+        copyText.setSelectionRange(0, 99999); /*For mobile devices*/
+
+        /* Copy the text inside the text field */
+        document.execCommand("copy");
+
+        /* Alert the copied text */
+        alert("Copied the text: " + copyText.value);
+    }
+
+    $('#progressbar').progressbar({
+        value: 0
+    });
+
+    $(function () {
+        $('#button').click(function () {
+            $('#progressbar').progressbar({
+                value: 45
+            });
+        });
+    });
+</script>
+<script src="https://use.fontawesome.com/0cc80ef660.js"></script>
+{% endblock script%}
