--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -87,61 +87,8 @@
                 <p>All rights reserved to <a href="https://cbsetoday.com" target="_blank">CBSE Today</a></p>
             </div>
         </div>
-        <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-        <script>
-            function saveTextAsFile(textToWrite, fileNameToSaveAs) {
-                var textFileAsBlob = new Blob([textToWrite], { type: 'text/plain' });
-                var downloadLink = document.createElement("a");
-                downloadLink.download = fileNameToSaveAs;
-                downloadLink.innerHTML = "Download File";
-                if (window.webkitURL != null) {
-                    // Chrome allows the link to be clicked
-                    // without actually adding it to the DOM.
-                    downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
-                }
-                else {
-                    // Firefox requires the link to be added to the DOM
-                    // before it can be clicked.
-                    downloadLink.href = window.URL.createObjectURL(textFileAsBlob);
-                    downloadLink.onclick = destroyClickedElement;
-                    downloadLink.style.display = "none";
-                    document.body.appendChild(downloadLink);
-                }
-
-                downloadLink.click();
-            }
-        </script>
-        <script>
-            function myFunction() {
-                /* Get the text field */
-                var copyText = document.getElementById("password");
-
-                /* Select the text field */
-                copyText.select();
-                copyText.setSelectionRange(0, 99999); /*For mobile devices*/
-
-                /* Copy the text inside the text field */
-                document.execCommand("copy");
-
-                /* Alert the copied text */
-                alert("Copied the text: " + copyText.value);
-            }
-
-            $('#progressbar').progressbar({
-                value: 0
-            });
-
-            $(function () {
-                $('#button').click(function () {
-                    $('#progressbar').progressbar({
-                        value: 45
-                    });
-                });
-            });
-        </script>
-        <script src="https://use.fontawesome.com/0cc80ef660.js"></script>
+        {% block script %}
+        {% endblock script %}
     </body>
 
 </html>
