--- a/passwordtools/templates/passwordtools/password_strength.html
+++ b/passwordtools/templates/passwordtools/password_strength.html
@@ -77,6 +77,9 @@
 {% endblock content %}
 
 {% block script %}
+<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script>
     function myFunction() {
         /* Get the text field */
