--- a/shortly/templates/shortly/home.html
+++ b/shortly/templates/shortly/home.html
@@ -3,7 +3,16 @@
 
 {% block content %}
 <h1>Short URLs</h1>
-{% for u in urls %}
-<p>Original {{u.original_url}} And short url {{u.short_url}}</p>
-{% endfor%}
+<form action="" method="post">
+    {% csrf_token %}
+    <label for="url">Generate Your own Short URL</label>
+    <input type="url" name="url" id="url" placeholder="Enter / Paste  your long URL here">
+    <input type="text" name ="custom" id="custom" placeholder="Your shortName">
+    <input type="submit" name="submit" value ="Generate Your Short URL">
+</form>
+{% if urls %}
+    {% for u in urls %}
+        <p>Original <a href="{{u.original_url}}">{{u.original_url}}</a> And short url <a href="{{u.short_url}}" target="_blank">{{u.short_url}}</a></p>
+    {% endfor%}
+{% endif %}
 {% endblock content %}
