Url SHortner addeed

--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -90,6 +90,7 @@
         </div>
         {% block script %}
         {% endblock script %}
+        <script src="https://use.fontawesome.com/0cc80ef660.js"></script>
     </body>
 
 </html>
