--- a/shortly/templates/shortly/home.html
+++ b/shortly/templates/shortly/home.html
@@ -10,6 +10,9 @@
     <input type="text" name ="custom" id="custom" placeholder="Your shortName">
     <input type="submit" name="submit" value ="Generate Your Short URL">
 </form>
+<div class="error">
+    
+</div>
 {% if urls %}
     {% for u in urls %}
         <p>Original <a href="{{u.original_url}}">{{u.original_url}}</a> And short url <a href="{{u.short_url}}" target="_blank">{{u.short_url}}</a></p>
