text tools added

--- a/qrgraph/templates/qrgraph/qrgraph.html
+++ b/qrgraph/templates/qrgraph/qrgraph.html
@@ -3,7 +3,7 @@
 {% block title %} Qr Code Generator Tool {% endblock %}
 
 {% block content %}
-<h1>Qr Code Generator Tool</h1>
+<h1>Qr Code Generator</h1>
 <form action="" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <label for="Name">Name</label><br />
