--- a/tools/templates/basic.html
+++ b/tools/templates/basic.html
@@ -20,6 +20,7 @@
                 <div class="menu">
                     <ul>
                         <li><a href="{% url 'home' %}">Home</a></li>
+                        <li><a href="{% url 'word_count' %}">Word Count</a></li>
                         <li><a href="{% url 'short_home' %}">shortURL</a></li>
                         <li><a href="#">CSV Tools</a>
                             <ul>
