--- a/shortly/templates/shortly/home.html
+++ b/shortly/templates/shortly/home.html
@@ -23,6 +23,7 @@
 </div>
 <div class="extra-information">
     <h3>What is Short URL</h3>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus ab exercitationem molestiae neque, vero beatae voluptatum. Ipsum, aliquid! Quas illum adipisci, explicabo officiis velit incidunt eveniet dicta architecto! Vitae repudiandae reprehenderit odit. Exercitationem recusandae sed non rerum in fuga dolore!</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus ab exercitationem molestiae neque,
+        vero beatae voluptatum. Ipsum, aliquid! Quas illum adipisci, explicabo officiis velit incidunt eveniet dicta architecto! Vitae repudiandae reprehenderit odit. Exercitationem recusandae sed non rerum in fuga dolore!</p>
 </div>
 {% endblock content %}
