--- a/Texttools/templates/Texttools/word_count.html
+++ b/Texttools/templates/Texttools/word_count.html
@@ -16,7 +16,10 @@
         Total words : {{summery.words}}
         upper case chars : {{summery.upper}}
         Lower case chars : {{summery.lower}}
-        Digits  : {{summery.digit}}
+        Total Digits  : {{summery.digit}}
+        Short Words : {{summery.short}}
+        Medium Words : {{summery.medium}}
+        Large Words : {{summery.large}}
     </div>
     <h2>Simple Facts out Word Count</h2>
     
