--- a/tools/static/css/base.css
+++ b/tools/static/css/base.css
@@ -1,5 +1,6 @@
-body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../image/background.svg') #e3e3e3;background-size:cover;box-sizing:border-box;}
-
+body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../image/background.svg') #e3e3e3;
+  background-size:cover;box-sizing:border-box;}
+.responsive{max-width:100%;height: auto;}
 #button{background:red;color:white;padding:8px 15px;text-align: center;cursor:pointer;width:250px;margin:0 auto;margin-bottom:10px;}
 
 #header{background:#444;}
@@ -21,8 +22,9 @@ body{margin: 0;padding: 0;font-size:18px;line-height: 28px;background:url('../im
 .menu ul ul li a{display:block;}
 .menu ul ul li a:hover{background:#444;color:#000;display:block;}
 
-.main-block{margin-top:10px;margin-bottom: 10px;}
+.main-block{margin-top:10px;margin-bottom: 10px;box-sizing: border-box;}
 .main{flex-basis:68%;padding:10px 20px;box-sizing: border-box;}
+
 .sidebar{flex-basis:30%;padding:10px 20px;background:#f0f0f0;}
 
 .tool{border:1px dotted #999; padding:10px 20px;}
